# TCP_server_and_client_linux

./: LICENSE  README.md
tcp_server_and_ client/tcp_client_with_audio/: CMakeLists.txt  README.md
tcp_server_and_ client/tcp_client_with_audio/include/: protocol_client.h  pthread_define.h  tcpclient.h
tcp_server_and_ client/tcp_client_with_audio/src/: main.cpp  pthread_define.c  tcpclient.cpp
tcp_server_and_ client/tcp_server_with_audio/: CMakeLists.txt  README.md  报文.txt
tcp_server_and_ client/tcp_server_with_audio/include/: audio_capture.h  audiocapture.h  protocol_data.h  pthread_define.h  tcpserver.h
tcp_server_and_ client/tcp_server_with_audio/src/: audio_capture.c  audiocapture.cpp  main.cpp  pthread_define.c  tcpserver.cpp
